middleware/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nyapsys
  labels:
    name: nyapsys
