middleware/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware
  namespace: nyapsys
spec:
  selector:
    app: middleware
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
